[project]
name = "stylish-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "librosa>=0.10.2.post1",
    "pyworld>=0.3.5",
    "safetensors>=0.5.2",
    "soundfile>=0.13.1",
    "torch<2.6",
    "torchaudio>=2.5.1",
    "torchcrepe>=0.0.23",
]
